fix(FEC-8344): 2 vertical lines with frames of the video appear on left and right sides of the player on IE11 (#6)
set the canvas width to 100%

--- a/src/style.css
+++ b/src/style.css
@@ -5,4 +5,5 @@
   right: 0;
   left: 0;
   margin: auto;
+  width: 100%;
 }
